--- a/HTMLPage1.html
+++ b/HTMLPage1.html
@@ -7,9 +7,86 @@
     <title></title>
 </head>
 <body>
+    <table border="1">
+        <thead>
+            <tr>
+                <th></th>
+                <th>월</th>
+                <th>화</th>
+                <th>수</th>
+                <th>목</th>
+                <th>금</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <th>1교시</th>
+                <th>국어</th>
+                <th>수학</th>
+                <th>과학</th>
+                <th>음악</th>
+                <th>영어</th>
+            </tr>
+
+            <tr>
+                <th>2교시</th>
+                <th>수학</th>
+                <th>국어</th>
+                <th>음악</th>
+                <th>영어</th>
+                <th>과학</th>
+            </tr>
+        </tbody>
+    </table>
+    <!-- 정의 리스트 만들기 -->
+    <dl>
+        <dt><strong>인공지능</strong></dt>
+        <dd>사람처럼 학습하고 사고하고 판단하는 컴퓨터소프트웨어</dd>
+    </dl>
+
+    <!-- 리스트 연습 -->
+    <li>내가 좋아하는 음식</li>
+    <ul>
+        <li>파스타</li>
+        <li>피자</li>
+        <li>햄버거</li>
+    </ul>
+
+    <li>라면 끓이는 방법</li>
+    <ol>
+        <li>물을 끓인다</li>
+        <li>스프와 라면을 넣는다</li>
+        <li>맛있게 먹는다</li>
+    </ol>
+
+    <li>취미활동</li>
+    <ul>
+        <li>자기</li>
+        <li>폰 보기</li>
+        <li>피아노 치기</li>
+    </ul>
+
     <!-- 리스트만들기 -->
+    <h3 title="하이퍼링크">웹 프로그래밍 참조 사이트</h3>
+    <hr />
+    <ul>
+        <li>CSS 색깔 이름과 값</li>
+        <li>문자 엔터티 코드 사이트</li>
+        <li>웹 프로그래밍 사이트</li>
+    </ul>
 
+    <ul>
+        <li>파이썬</li>
+        <li>인공지능</li>
+        <li>머신러닝</li>
+    </ul>
 
+    <!-- A, a, I, u -->
+    <ol type = "I">
+        <li>파이썬</li>
+        <li>인공지능</li>
+        <li>머신러닝</li>
+    </ol>
 
     <!-- tooltip 연습 -->
     <h1 title="h1으로 작성">h1</h1>
