--- a/HTML/_4_carousel_start.html
+++ b/HTML/_4_carousel_start.html
@@ -85,6 +85,21 @@
             }            
         })
 
+        $('.prev').on('click', function(){
+        if(current==1){
+            $('.slide-container').css('transform','translateX(-200vw)');
+            current = 3;
+        }
+        else if(current==2){
+            $('.slide-container').css('transform','translateX(0vw)');
+            current = 1;
+        }
+        else if(current==3){
+            $('.slide-container').css('transform','translateX(-100vw)');
+            current = 2;
+        }            
+        })
+
         $('.slide-1').on('click', function(){
             $('.slide-container').css('transform','translateX(0vw)');
             current = 1;
@@ -96,10 +111,6 @@
         $('.slide-3').on('click', function(){
             $('.slide-container').css('transform','translateX(-200vw)');
             current = 3;
-        })
-        $('.slide-1').on('click', function(){
-            $('.slide-container').css('transform','translateX(-100vw)');
-            current = 4;
         })
     </script> 
     
